--- a/index.html
+++ b/index.html
@@ -51,10 +51,18 @@
             <div class="container">
             <h2 class="not-h-two visually-hidden" >H</h2>
             <ul class="section-list">
-                <li class="section-info-item"><h3 class="section-two-together">Strategy</h3><p class="h-three-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-                <li class="section-info-item"><h3 class="section-two-together">Punctuality</h3><p class="h-three-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-                <li class="section-info-item"><h3 class="section-two-together">Diligence</h3><p class="h-three-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-                <li class="section-info-item"><h3 class="section-two-together">Technologies</h3><p class="h-three-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+                <li class="section-info-item"><h3 class="section-two-together"> <div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                    <use href="./images/icons.svg#Group"></use>
+                </svg></div>Strategy</h3><p class="h-three-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+                <li class="section-info-item"><h3 class="section-two-together"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                    <use href="./images/icons.svg#clock"></use>
+                </svg></div>Punctuality</h3><p class="h-three-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+                <li class="section-info-item"><h3 class="section-two-together"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                    <use href="./images/icons.svg#diagram"></use>
+                </svg></div>Diligence</h3><p class="h-three-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+                <li class="section-info-item"><h3 class="section-two-together"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                    <use href="./images/icons.svg#astronaut"></use>
+                </svg></div>Technologies</h3><p class="h-three-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
             </div>
         </section>
@@ -68,6 +76,37 @@
                     <h3 class="h-three-name">Mark Guerrero</h3>
                     <p class="p-job">Product Designer</p>
                     </div>
+                    <div> <ul class="icon-list">
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                   </div>
                 </li>
                 <li class="main-item">
                     <img src="./images/tom.jpg" alt="Tom Ford avatar" width="264" height="260">
@@ -75,6 +114,37 @@
                     <h3 class="h-three-name">Tom Ford</h3>
                     <p class="p-job">Frontend Developer</p>
                     </div>
+                    <div> <ul class="icon-list">
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                   </div>
                 </li>
                 <li class="main-item">
                     <img src="./images/camila.jpg" alt="Camila Garcia avatar" width="264" height="260">
@@ -82,6 +152,37 @@
                     <h3 class="h-three-name">Camila Garcia</h3>
                     <p class="p-job">Marketing</p>
                     </div>
+                    <div> <ul class="icon-list">
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                   </div>
                 </li>
                 <li class="main-item">
                     <img src="./images/daniel.jpg" alt="Daniel Wilson avatar" width="264" height="260">
@@ -89,9 +190,39 @@
                     <h3 class="h-three-name">Daniel Wilson</h3>
                     <p class="p-job">UI Designer</p>
                     </div>
+                    <div> <ul class="icon-list">
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="itme-icon">
+                            <a href="" class="icon-link">
+                                <svg width="40" height="40" class="portfolio-icon">
+                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                   </div>
                 </li>
             </ul>
-            </div>
         </section>
         <section class="section section-portfolio">
             <div class="container">
@@ -105,11 +236,18 @@
                     </div>
                 </li>
                 <li class="portfolio-item">
-                    <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">            
+                    <a href="#" class="link-portfolio">
+                    <div class="container-img">
+                    <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">     
+                    </div>
+                    <div class="container-p">
+                        <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>     
                     <div class="container-portfolio">
                     <h3 class="section-two-together">Cashless Payment</h3>
                     <p class="h-three-p">Marketing</p>
                     </div>
+                    </a>
                 </li>
                 <li class="portfolio-item">
                     <img src="./images/meditationapp.jpg" alt="Meditation App" width="360" height="300">
@@ -148,6 +286,39 @@
         <a class="logo  footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
+        <div class="footer-div">
+            <h3 class="footer-h">Social media</h3>
+            <ul class="icon-list">
+                <li class="itme-icon">
+                    <a href="#" class="icon-link">
+                        <svg width="40" height="40" class="portfolio-icon">
+                            <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="itme-icon">
+                    <a href="" class="icon-link">
+                        <svg width="40" height="40" class="portfolio-icon">
+                            <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="itme-icon">
+                    <a href="" class="icon-link">
+                        <svg width="40" height="40" class="portfolio-icon">
+                            <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="itme-icon">
+                    <a href="" class="icon-link">
+                        <svg width="40" height="40" class="portfolio-icon">
+                            <use width="16" heidht="16" width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+            </div>
     </footer>
 </body>
 </html>
