--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
             <div class="container">
             <h2 class="not-h-two visually-hidden" >H</h2>
             <ul class="section-list">
-                <li class="section-info-item"><h3 class="section-two-together"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                <li class="section-info-item"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
                     <use href="./images/icons.svg#Group"></use>
-                </svg></div>Strategy</h3><p class="h-three-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-                <li class="section-info-item"><h3 class="section-two-together"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                </svg></div><h3 class="section-two-together">Strategy</h3><p class="h-three-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+                <li class="section-info-item"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
                     <use href="./images/icons.svg#clock"></use>
-                </svg></div>Punctuality</h3><p class="h-three-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-                <li class="section-info-item"><h3 class="section-two-together"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                </svg></div><h3 class="section-two-together">Punctuality</h3><p class="h-three-p">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+                <li class="section-info-item"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
                     <use href="./images/icons.svg#diagram"></use>
-                </svg></div>Diligence</h3><p class="h-three-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-                <li class="section-info-item"><h3 class="section-two-together"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                </svg></div><h3 class="section-two-together">Diligence</h3><p class="h-three-p">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+                <li class="section-info-item"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
                     <use href="./images/icons.svg#astronaut"></use>
-                </svg></div>Technologies</h3><p class="h-three-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+                </svg></div><h3 class="section-two-together">Technologies</h3><p class="h-three-p">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
             </ul>
             </div>
         </section>
@@ -76,7 +76,8 @@
                     <h3 class="h-three-name">Mark Guerrero</h3>
                     <p class="p-job">Product Designer</p>
                     </div>
-                    <div> <ul class="icon-list">
+                    <div> 
+                        <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
@@ -107,14 +108,14 @@
                         </li>
                     </ul>
                    </div>
-                </li>
                 <li class="main-item">
                     <img src="./images/tom.jpg" alt="Tom Ford avatar" width="264" height="260">
                     <div class="container-team">
                     <h3 class="h-three-name">Tom Ford</h3>
                     <p class="p-job">Frontend Developer</p>
                     </div>
-                    <div> <ul class="icon-list">
+                    <div> 
+                        <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
@@ -152,7 +153,8 @@
                     <h3 class="h-three-name">Camila Garcia</h3>
                     <p class="p-job">Marketing</p>
                     </div>
-                    <div> <ul class="icon-list">
+                    <div> 
+                        <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
@@ -190,7 +192,8 @@
                     <h3 class="h-three-name">Daniel Wilson</h3>
                     <p class="p-job">UI Designer</p>
                     </div>
-                    <div> <ul class="icon-list">
+                    <div>
+                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
