--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="header-nav">
               <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                <ul class="nav-list">
-                 <li class="nav-item nav-studio"><a class="nav-link" href="./index.html">Studio</a></li>
+                 <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
                  <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
                  <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
                </ul>
@@ -51,7 +51,7 @@
             <div class="container">
             <h2 class="not-h-two visually-hidden" >H</h2>
             <ul class="section-list">
-                <li class="section-info-item"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
+                <li class="section-info-item"><div class="container-info-icon"><svg width="64"  height="64" class="info-icon">
                     <use href="./images/icons.svg#Group"></use>
                 </svg></div><h3 class="section-two-together">Strategy</h3><p class="h-three-p">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
                 <li class="section-info-item"><div class="container-info-icon"><svg width="64" height="64" class="info-icon">
@@ -80,28 +80,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -118,28 +118,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -157,28 +157,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -196,28 +196,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -295,7 +295,7 @@
                 <li class="itme-icon">
                     <a href="#" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" heidht="16" href="./images/icons.svg#instagram"></use>
+                            <use width="16" height="16" href="./images/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
