--- a/index.html
+++ b/index.html
@@ -80,28 +80,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16"href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16"href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16"href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -118,28 +118,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16"href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16"href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16"href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16"href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -157,28 +157,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16"href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -196,28 +196,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#instagram"></use>
+                                    <use width="16"href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#twitter"></use>
+                                    <use width="16"href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#facebook"></use>
+                                    <use width="16"href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" height="16" href="./images/icons.svg#linkedin"></use>
+                                    <use width="16"href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -296,28 +296,28 @@
                 <li class="itme-icon">
                     <a href="#" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" height="16" href="./images/icons.svg#instagram"></use>
+                            <use width="16"  href="./images/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" heidht="16" href="./images/icons.svg#twitter"></use>
+                            <use width="16" href="./images/icons.svg#twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" heidht="16" href="./images/icons.svg#facebook"></use>
+                            <use width="16" href="./images/icons.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" heidht="16" width="16" heidht="16" href="./images/icons.svg#linkedin"></use>
+                            <use width="16" href="./images/icons.svg#linkedin"></use>
                         </svg>
                     </a>
                 </li>
