--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="header-nav">
               <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                <ul class="nav-list">
-                 <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+                 <li class="nav-item nav-studio"><a class="nav-link" href="./index.html">Studio</a></li>
                  <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
                  <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
                </ul>
@@ -285,38 +285,38 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
         <a class="logo  footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </div>
         <div class="footer-div">
-            <h3 class="footer-h">Social media</h3>
-            <ul class="icon-list">
+            <p class="footer-h-p">Social media</p>
+            <ul class="icon-list-footer">
                 <li class="itme-icon">
                     <a href="#" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16"  href="./images/icons.svg#instagram"></use>
+                            <use class="icon-img" href="./images/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" href="./images/icons.svg#twitter"></use>
+                            <use class="icon-img" href="./images/icons.svg#twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" href="./images/icons.svg#facebook"></use>
+                            <use class="icon-img" href="./images/icons.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
                     <a href="" class="icon-link">
                         <svg width="40" height="40" class="portfolio-icon">
-                            <use width="16" href="./images/icons.svg#linkedin"></use>
+                            <use class="icon-img" href="./images/icons.svg#linkedin"></use>
                         </svg>
                     </a>
                 </li>
