--- a/index.html
+++ b/index.html
@@ -25,12 +25,11 @@
             <nav class="header-nav">
               <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
                <ul class="nav-list">
-                 <li class="nav-item nav-studio"><a class="nav-link" href="./index.html">Studio</a></li>
+                 <li class="nav-item"><a class="nav-link nav-studio" href="./index.html">Studio</a></li>
                  <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
                  <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
                </ul>
             </nav>
-
             <address class="address">
                 <ul class="address-list">
                  <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
