--- a/index.html
+++ b/index.html
@@ -74,33 +74,33 @@
                     <div class="container-team">
                     <h3 class="h-three-name">Mark Guerrero</h3>
                     <p class="p-job">Product Designer</p>
-                    <div> 
+                    <div class="div-team"> 
                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#instagram"></use>
+                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#twitter"></use>
+                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#facebook"></use>
+                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#linkedin"></use>
+                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -117,28 +117,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#instagram"></use>
+                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#twitter"></use>
+                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#facebook"></use>
+                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#linkedin"></use>
+                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -156,28 +156,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#instagram"></use>
+                                    <use class="icon-use"" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#twitter"></use>
+                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#facebook"></use>
+                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#linkedin"></use>
+                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -195,28 +195,28 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#instagram"></use>
+                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#twitter"></use>
+                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#facebook"></use>
+                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use width="16" href="./images/icons.svg#linkedin"></use>
+                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
