--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <li class="itme-icon">
                             <a href="" class="icon-link">
                                 <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use"" href="./images/icons.svg#instagram"></use>
+                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
