--- a/index.html
+++ b/index.html
@@ -74,33 +74,33 @@
                     <div class="container-team">
                     <h3 class="h-three-name">Mark Guerrero</h3>
                     <p class="p-job">Product Designer</p>
-                    <div class="div-team"> 
+                    <div> 
                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -116,29 +116,29 @@
                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -155,29 +155,29 @@
                         <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -194,29 +194,29 @@
                          <ul class="icon-list">
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#instagram"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#twitter"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#facebook"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="itme-icon">
                             <a href="" class="icon-link">
-                                <svg width="40" height="40" class="portfolio-icon">
-                                    <use class="icon-use" href="./images/icons.svg#linkedin"></use>
+                                <svg width="16" height="16" class="portfolio-icon">
+                                    <use href="./images/icons.svg#linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -231,8 +231,11 @@
             <h2 class="portfolio">Our Portfolio</h2>
             <ul class="section-list-portfolio">
                 <li class="portfolio-item">
+                    <div class="container-img">
                     <img src="./images/bankingapp.jpg" alt="Banking App" width="360" height="300">
-                    <div class="container-portfolio">
+                    <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>  
+                    <div>
                     <h3 class="section-two-together">Banking App</h3>
                     <p class="h-three-p">App</p>
                     </div>
@@ -243,35 +246,47 @@
                     <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">     
                     <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                 </div>  
-                    <div class="container-portfolio">
+                    <div>
                     <h3 class="section-two-together">Cashless Payment</h3>
                     <p class="h-three-p">Marketing</p>
                     </div>
                     </a>
                 </li>
                 <li class="portfolio-item">
+                    <div class="container-img">
                     <img src="./images/meditationapp.jpg" alt="Meditation App" width="360" height="300">
+                    <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>  
                     <div class="container-portfolio">
                         <h3 class="section-two-together">Meditation App</h3>
                     <p class="h-three-p">App</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="container-img">
                     <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360" height="300">
+                    <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>  
                     <div class="container-portfolio">
                         <h3 class="section-two-together">Taxi Service</h3>
                     <p class="h-three-p">Marketing</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="container-img">
                     <img src="./images/screenillustrations.jpg" alt="Screen Illustrations" width="360" height="300">
+                    <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>  
                     <div class="container-portfolio">
                     <h3 class="section-two-together">Screen Illustrations</h3>
                     <p class="h-three-p">Design</p>
                     </div>
                 </li>
                 <li class="portfolio-item">
+                    <div class="container-img">
                     <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" height="300">
+                    <p class="container-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>  
                     <div class="container-portfolio">
                      <h3 class="section-two-together">Online Courses</h3>
                     <p class="h-three-p">Marketing</p>
@@ -290,28 +305,28 @@
             <p class="footer-h-p">Social media</p>
             <ul class="icon-list-footer">
                 <li class="itme-icon">
-                    <a href="#" class="icon-link">
+                    <a href="#" class="icon-link-footer">
                         <svg width="40" height="40" class="portfolio-icon">
                             <use class="icon-img" href="./images/icons.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
-                    <a href="" class="icon-link">
+                    <a href="" class="icon-link-footer">
                         <svg width="40" height="40" class="portfolio-icon">
                             <use class="icon-img" href="./images/icons.svg#twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
-                    <a href="" class="icon-link">
+                    <a href="" class="icon-link-footer">
                         <svg width="40" height="40" class="portfolio-icon">
                             <use class="icon-img" href="./images/icons.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="itme-icon">
-                    <a href="" class="icon-link">
+                    <a href="" class="icon-link-footer">
                         <svg width="40" height="40" class="portfolio-icon">
                             <use class="icon-img" href="./images/icons.svg#linkedin"></use>
                         </svg>
