--- a/index.html
+++ b/index.html
@@ -241,7 +241,6 @@
                     <h3 class="section-two-together">Cashless Payment</h3>
                     <p class="h-three-p">Marketing</p>
                     </div>
-                    </a>
                 </li>
                 <li class="portfolio-item">
                     <div class="container-img">
@@ -292,6 +291,7 @@
             <div class="div-footer">
         <a class="logo  footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <p class="footer-p">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
         </div>
         <div>
             <p class="footer-h-p">Social media</p>
