--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <!-- =====HEADER===== -->
     <header class="page-header">
         <div class="container header-contaiener">
             <nav class="header-nav">
@@ -39,6 +40,7 @@
         </div>
     </header>
     <main>
+        <!-- SECTION 1 -->
         <section class="main-section">
             <div class="container">
             <h1 class="h-one">Effective Solutions
@@ -46,6 +48,7 @@
                 <button class="button" type="button">Order Service</button>
             </div>
         </section>
+        <!-- SECTION 2 -->
         <section class="section section-info">
             <div class="container">
             <h2 class="not-h-two visually-hidden" >H</h2>
@@ -65,6 +68,7 @@
             </ul>
             </div>
         </section>
+        <!-- SECTION 3 -->
         <section class="section section-team">
             <div class="container">
             <h2 class="h-two-team">Our Team</h2>
@@ -218,6 +222,7 @@
             </ul>
         </div>
         </section>
+        <!-- SECTION 4 -->
         <section class="section section-portfolio">
             <div class="container">
             <h2 class="portfolio">Our Portfolio</h2>
@@ -286,6 +291,7 @@
             </div>
         </section>
     </main>
+    <!-- =====FOOTER===== -->
     <footer class="footer">
         <div class="container footer-container">
             <div class="div-footer">
@@ -325,7 +331,7 @@
                     </a>
                 </li>
             </ul>
-            </div>
+        </div>
     </footer>
 </body>
 </html>
