tochno all ready 2.5

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 </svg>
                             </a>
                         </li>
-                        <li class="itme-icon">
+                        <li class="item-icon">
                             <a href="" class="icon-link">
                                 <svg width="16" height="16" class="portfolio-icon">
                                     <use href="./images/icons.svg#twitter"></use>
